Updated package name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wagnerwagner/merx",
+    "name": "jimkrutor/merx",
     "description": "A toolkit to create online shops with Kirby",
     "version": "1.8.0-beta.1",
     "license": "proprietary",
